--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "aws-dynamo-repo",
   "version": "0.0.0",
   "description": "Repositories for DynamoDB",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,13 +21,13 @@
     "url": "https://github.com/AitorGuerrero/aws-dynamo-repo/issues"
   },
   "homepage": "https://github.com/AitorGuerrero/aws-dynamo-repo#readme",
-  "dependencies": {
-    "typescript": "^2.6.2"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@types/chai": "^4.0.10",
     "@types/mocha": "^2.2.44",
     "@types/node": "^8.5.1",
     "aws-sdk": "^2.171.0",
+    "chai": "^4.1.2",
     "mocha": "^4.0.1",
     "tslint": "^5.8.0",
     "typescript": "^2.6.2"
