--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Repositories for DynamoDB",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "pretest": "npm run build",
+    "test": "mocha src/**/*.test.js"
   },
   "repository": {
     "type": "git",
