--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "aws-dynamo-repo",
   "version": "0.1.0",
   "description": "Repositories for DynamoDB",
-  "main": "src/index.js",
+  "main": "./src/index.js",
+  "types": "./src/index.d.ts",
   "scripts": {
     "build": "tsc",
     "pretest": "npm run build",
-    "test": "mocha src/**/*.test.js"
+    "test": "mocha src/**/*.test.js",
+    "preversion": "npm install && npm run build && npm run check:install"
   },
   "repository": {
     "type": "git",
