--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "pretest": "npm run build",
     "test": "mocha src/**/*.test.js",
-    "preversion": "npm install && npm run build && npm run check:install"
+    "preversion": "npm install && npm run build"
   },
   "repository": {
     "type": "git",
