--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
         "module": "commonjs",
         "target": "ES2015",
         "noImplicitAny": true,
-        "sourceMap": false
+        "sourceMap": false,
+        "declaration": true
     },
     "exclude": [
         "node_modules"
