--- a/package.json
+++ b/package.json
@@ -25,15 +25,19 @@
     "url": "https://github.com/AitorGuerrero/aws-dynamo-repo/issues"
   },
   "homepage": "https://github.com/AitorGuerrero/aws-dynamo-repo#readme",
-  "dependencies": {},
+  "dependencies": {
+    "dynamo-entity-manager": "^0.2.0",
+    "powered-dynamo": "^1.0.0"
+  },
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.5",
-    "@types/node": "^10.12.15",
-    "aws-sdk": "^2.377.0",
+    "@types/node": "^10.12.18",
+    "aws-sdk": "^2.384.0",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
-    "tslint": "^5.11.0",
+    "nyc": "^13.1.0",
+    "tslint": "^5.12.0",
     "typescript": "^3.2.2"
   }
 }
