--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "ES2015",
+        "target": "esnext",
         "noImplicitAny": true,
         "sourceMap": false,
         "declaration": true
