--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   },
   "homepage": "https://github.com/AitorGuerrero/aws-dynamo-repo#readme",
   "dependencies": {
-    "dynamo-entity-manager": "^1.1.0-3",
-    "powered-dynamo": "^1.1.1"
+    "dynamo-entity-manager": "^2.0.1",
+    "powered-dynamo": "^1.2.0"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
