--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
-node_modules
+# IDE
 .idea
-src/**/*.js
-index.js
-index.d.ts
-src/**/*.d.ts
+
+# Dependencies
+node_modules
+
+# Generated
+**/*.js
+**/*.js.map
+**/*.d.ts
 .nyc_output
