--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "./src/index.js",
   "types": "./src/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "pretest": "yarn run build",
+    "pretest": "yarn build",
     "test": "mocha src/**/*.test.js",
-    "preversion": "yarn install && yarn run build",
-    "postpublish": "git push"
+    "build": "tsc",
+    "check:style": "tslint -p .",
+    "check:builds": "tsc --noEmit",
+    "preversion": "yarn run build && yarn run coverage",
+    "coverage": "nyc mocha"
   },
   "repository": {
     "type": "git",
@@ -28,7 +30,7 @@
   "homepage": "https://github.com/AitorGuerrero/aws-dynamo-repo#readme",
   "dependencies": {
     "dynamo-entity-manager": "^2.1.4",
-    "powered-dynamo": "2"
+    "powered-dynamo": "^2"
   },
   "devDependencies": {
     "@types/chai": "^4.2.5",
@@ -36,9 +38,20 @@
     "@types/node": "^12.12.14",
     "aws-sdk": "2.488.0",
     "chai": "^4.2.0",
+    "husky": "^3.1.0",
     "mocha": "^6.2.2",
     "nyc": "^14.1.1",
     "tslint": "^5.20.1",
     "typescript": "^3.7.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn && yarn check:style && yarn check:builds && yarn test"
+    }
+  },
+  "nyc": {
+    "extends": "@istanbuljs/nyc-config-typescript",
+    "all": true,
+    "check-coverage": true
   }
 }
