--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "./src/index.js",
   "types": "./src/index.d.ts",
   "scripts": {
+    "prebuild": "yarn",
+    "prebuild:check": "yarn prebuild",
+    "build:check": "tsc --noEmit",
     "pretest": "yarn build",
     "test": "mocha",
-    "build": "tsc",
-    "check:style": "tslint -p .",
-    "check:builds": "tsc --noEmit",
+    "style:check": "tslint -p .",
+    "style:fix": "tslint -p . --fix",
     "preversion": "yarn run build",
+    "precoverage": "yarn build",
     "coverage": "nyc mocha"
   },
   "repository": {
@@ -35,20 +38,20 @@
   "devDependencies": {
     "@types/chai": "^4.2.5",
     "@types/mocha": "^8.0.3",
-    "@types/node": "^12.12.14",
+    "@types/node": "^14.6.4",
     "aws-sdk": "^2.656.0",
     "chai": "^4.2.0",
     "husky": "^4.2.3",
     "mocha": "^8.1.3",
     "nyc": "^15.0.1",
     "source-map-support": "^0.5.16",
-    "ts-node": "^8.8.2",
-    "tslint": "^5.20.1",
-    "typescript": "^3.7.2"
+    "ts-node": "^9.0.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.0.2"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn && yarn check:style && yarn check:builds && yarn test"
+      "pre-commit": "yarn && tsc && tslint -p . && nyc mocha"
     }
   }
 }
