--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "./src/index.d.ts",
   "scripts": {
     "prebuild": "yarn",
+    "build": "tsc",
     "prebuild:check": "yarn prebuild",
     "build:check": "tsc --noEmit",
     "pretest": "yarn build",
