--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "style:fix": "tslint -p . --fix",
     "preversion": "yarn run build",
     "precoverage": "yarn build",
-    "coverage": "nyc mocha"
+    "coverage": "nyc mocha",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -42,7 +43,7 @@
     "@types/node": "^14.6.4",
     "aws-sdk": "^2.656.0",
     "chai": "^4.2.0",
-    "husky": "^4.2.3",
+    "husky": "^7.0.2",
     "mocha": "^8.1.3",
     "nyc": "^15.0.1",
     "source-map-support": "^0.5.16",
