--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,7 @@
         "noImplicitThis": true,
         "sourceMap": true,
         "declaration": true,
-        "strictBindCallApply": true,
-        "strictFunctionTypes": true,
-        "alwaysStrict": true
+        "strict": true
     },
     "exclude": [
         "node_modules"
