--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./src/index.js",
   "types": "./src/index.d.ts",
   "scripts": {
+    "install": "husky init",
     "prebuild": "yarn",
     "build": "tsc",
     "prebuild:check": "yarn prebuild",
@@ -42,7 +43,7 @@
     "@types/node": "^14.6.4",
     "aws-sdk": "^2.656.0",
     "chai": "^4.2.0",
-    "husky": "^4.2.3",
+    "husky": "^7.0.4",
     "mocha": "^8.1.3",
     "nyc": "^15.0.1",
     "source-map-support": "^0.5.16",
