--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/index.js",
   "types": "./src/index.d.ts",
   "scripts": {
-    "install": "husky init",
+    "prepare": "husky install",
     "prebuild": "yarn",
     "build": "tsc",
     "prebuild:check": "yarn prebuild",
